--- a/we-couldnt-process-your-payment.html
+++ b/we-couldnt-process-your-payment.html
@@ -379,9 +379,9 @@
         
         button {
             margin-top: 15px;
+            background: rgb(45,250,199);
+            background: radial-gradient(circle, rgba(45,250,199,1) 0%, rgba(61,150,184,1) 100%);        
             box-shadow: inset 0px 1px 0px 0px #54a3f7;
-            background: linear-gradient(to bottom, #1ba7ba 5%, #1f909c 100%);
-            background-color: #1ba7ba;
             border-radius: 3px;
             border: 1px solid #1ba7ba;
             display: inline-block;
