change all padding-bottom: 14vw

--- a/title-of-the-email.html
+++ b/title-of-the-email.html
@@ -478,7 +478,7 @@
                                                                                     </td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom: 14vw;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px;" class="esd-text">
+                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px;" class="esd-text">
                                                                                         <p style="margin:0px;text-size-adjust:none;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:19px;color:#ffffff;font-size:15px"
                                                                                         >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                                                                                     </br>
