--- a/dear-customer-name.html
+++ b/dear-customer-name.html
@@ -469,7 +469,7 @@
                                                                             <tbody>
                                                                                 <tr>
                                                                                     <td align="center" class="es-m-txt-c esd-text" style="padding:0;Margin:0;padding-top:15px;padding-bottom:15px">
-                                                                                        <h1 style="margin:0px;line-height:55px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:25px;font-style:normal;font-weight:bold;color:#ffffff;max-width:800px;padding-left: 20px;padding-right: 20px;">ear [Customer Name],</br> Looks like you've forgotten your password. 
+                                                                                        <h1 style="margin:0px;line-height:55px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:25px;font-style:normal;font-weight:bold;color:#ffffff;max-width:800px;padding-left: 20px;padding-right: 20px;">Dear [Customer Name],</br> Looks like you've forgotten your password. 
                                                                                         </h1>
                                                                                     </td>
                                                                                 </tr>
