--- a/welcome-to-unplugged.html
+++ b/welcome-to-unplugged.html
@@ -474,7 +474,7 @@
                                                                                     </td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom: 14vw;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px;" class="esd-text">
+                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px;" class="esd-text">
                                                                                         <p style="margin:0px;text-size-adjust:none;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#ffffff;font-size:15px;width:100%">You've just started your journey to reclaim your privacy.</p>
                                                                                         <p style="margin:0px;text-size-adjust:none;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#05f1f9;font-size:15px;width:100%">You can now enjoy your 14-days of FREE Premium Subscription to the UP App Suite.</p>
 
