--- a/your-plan-is-now-basic.html
+++ b/your-plan-is-now-basic.html
@@ -474,7 +474,7 @@
                                                                                     </td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom: 14vw;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px;" class="esd-text">
+                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px;" class="esd-text">
                                                                                         <p style="margin:0px;text-size-adjust:none;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#ffffff;font-size:15px;max-width:91%">… but don't worry.<br/>
                                                                                             You can still use our applications for free, but there will be some limitations:
                                                                                             </p>
