change all backgroud-color to black

--- a/confirmation-of-billing-changes.html
+++ b/confirmation-of-billing-changes.html
@@ -410,13 +410,13 @@
 </head>
 
 <body style="width:100%;text-size-adjust:100%;padding:0px;margin:0px">
-    <div class="es-wrapper-color" style="background-color:#0D181A">
+    <div class="es-wrapper-color" style="background-color:black">
         <!--[if gte mso 9]>
 			<v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
 				<v:fill type="tile" color="null"></v:fill>
 			</v:background>
 		<![endif]-->
-        <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:0;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:#0D181A">
+        <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:0;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:black">
             <tbody>
                 <tr>
                     <td valign="top" style="padding:0;Margin:0">
@@ -457,7 +457,7 @@
                             <tbody>
                                 <tr>
                                     <td align="center" style="padding:0;Margin:0">
-                                        <table bgcolor="#0d181a" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#0D181A;width:600px">
+                                        <table bgcolor="black" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:black;width:600px">
                                             <tbody>
                                                 <tr>
                                                     <td align="left" style="padding:0;Margin:0;padding-top:15px;">
@@ -474,7 +474,7 @@
                                                                                     </td>
                                                                                 </tr>
                                                                                 <tr>
-                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom: 14vw;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px;" class="esd-text">
+                                                                                    <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom: 14vw;background-size: 100%;background-position: center 9vw;background-repeat: no-repeat;padding-left:20px;padding-right:20px; background-color: black;" class="esd-text">
                                                                                         <p style="margin:0px;text-size-adjust:none;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#ffffff;font-size:15px;max-width:70%">You successfully switched your plan. Upon your next renewal (XX/XX/XXXX), you will be charged [annually]/[monthly]</p>
                                                                                                                                                                      
                                                                                             <p>
