--- a/title-of-the-email-with-image.html
+++ b/title-of-the-email-with-image.html
@@ -410,13 +410,13 @@
 </head>
 
 <body style="width:100%;text-size-adjust:100%;padding:0px;margin:0px">
-    <div class="es-wrapper-color" style="background-color:#0D181A">
+    <div class="es-wrapper-color" style="background-color:black">
         <!--[if gte mso 9]>
 			<v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
 				<v:fill type="tile" color="null"></v:fill>
 			</v:background>
 		<![endif]-->
-        <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:0;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:#0D181A">
+        <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;padding:0;Margin:0;width:100%;height:100%;background-repeat:repeat;background-position:center top;background-color:black">
             <tbody>
                 <tr>
                     <td valign="top" style="padding:0;Margin:0">
@@ -458,7 +458,7 @@
                             <tbody>
                                 <tr>
                                     <td align="center" style="padding:0;Margin:0">
-                                        <table bgcolor="#0d181a" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:#0D181A;width:600px">
+                                        <table bgcolor="black" class="es-content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:black;width:600px">
                                             <tbody>
                                                 <tr>
                                                     <td align="left" style="padding:0;Margin:0;padding-top:5px;">
